--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -6,19 +6,18 @@
 # all, none, or list of linter keys
 APPLY_FIXES: none
 
-# If you use ENABLE variable, all other languages/formats/tooling-formats will
-# be disabled by default
-# ENABLE:
-
-# If you use ENABLE_LINTERS variable, all other linters will be disabled by
-# default
-# ENABLE_LINTERS:
-
 DISABLE:
   - COPYPASTE # Comment to enable checks of excessive copy-pastes
-  # - SPELL # Uncomment to disable checks of spelling mistakes
+
+DISABLE_LINTERS:
+  - BASH_SHFMT
+  - COPYPASTE_JSCPD
+  - REPOSITORY_GRYPE
+  # https://gluwa.atlassian.net/browse/CSUB-460
+  - REPOSITORY_TRIVY
+  - RUST_CLIPPY
+  - SPELL_CSPELL
+  - SPELL_MISSPELL
+  - GRAPHQL_GRAPHQL_SCHEMA_LINTER
 
 SHOW_ELAPSED_TIME: true
-
-# Uncomment if you want MegaLinter to detect errors but not block CI to pass
-# DISABLE_ERRORS: true
