style(lint): disable js/ts standard on megalinter

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -16,5 +16,7 @@ DISABLE_LINTERS:
   # https://gluwa.atlassian.net/browse/CSUB-460
   - REPOSITORY_TRIVY
   - REPOSITORY_GITLEAKS
+  - JAVASCRIPT_STANDARD
+  - TYPESCRIPT_STANDARD
 
 SHOW_ELAPSED_TIME: true
