feat(ci): remove cspell

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -18,5 +18,6 @@ DISABLE_LINTERS:
   - REPOSITORY_GITLEAKS
   - JAVASCRIPT_STANDARD
   - TYPESCRIPT_STANDARD
+  - SPELL_CSPELL
 
 SHOW_ELAPSED_TIME: true
