--- a/bridge-offchain-worker/package.json
+++ b/bridge-offchain-worker/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "start_worker": "tsx src/worker.ts"
+    "start_worker": "tsx src/worker.ts",
+    "check_balance": "node src/check_balance.js"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.3.1",
     "tsx": "^4.20.3"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
