--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -6,8 +6,6 @@ name: MegaLinter
 # Trigger mega-linter at every push. Action will also be visible from
 # Pull Requests to main
 on:
-  push:
-
   pull_request:
     branches:
       - main
@@ -98,7 +96,7 @@ jobs:
         if: success() || failure()
         with:
           name: MegaLinter reports
-          include-hidden-files: 'true'
+          include-hidden-files: "true"
           path: |
             megalinter-reports
             mega-linter.log
@@ -122,8 +120,8 @@ jobs:
           !contains(github.event.head_commit.message, 'skip fix')
         with:
           token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
-          commit-message: '[MegaLinter] Apply linters automatic fixes'
-          title: '[MegaLinter] Apply linters automatic fixes'
+          commit-message: "[MegaLinter] Apply linters automatic fixes"
+          title: "[MegaLinter] Apply linters automatic fixes"
           labels: bot
 
       - name: Create PR output
@@ -183,6 +181,6 @@ jobs:
               github.head_ref ||
               github.ref
             }}
-          commit_message: '[MegaLinter] Apply linters fixes'
+          commit_message: "[MegaLinter] Apply linters fixes"
           commit_user_name: megalinter-bot
           commit_user_email: 129584137+megalinter-bot@users.noreply.github.com
