--- a/.github/workflows/md-command-check.yml
+++ b/.github/workflows/md-command-check.yml
@@ -9,6 +9,8 @@ concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
   cancel-in-progress: true
 
+permissions: read-all
+
 jobs:
   md-check:
     runs-on: ubuntu-latest
@@ -27,7 +29,7 @@ jobs:
 
       - name: list tests
         run: |
-          nix develop --command md-command-check --list --debug $FILES
+          "nix develop --command md-command-check --list --debug $FILES"
 
       - name: md-command-check
         env:
@@ -35,4 +37,4 @@ jobs:
           USC_DOCS_TESTING_PK: ${{ secrets.USC_DOCS_TESTING_PK }}
           USC_DOCS_TESTING_ADDRESS: ${{ secrets.USC_DOCS_TESTING_ADDRESS }}
         run: |
-          nix develop --command md-command-check --debug $FILES
+          "nix develop --command md-command-check --debug $FILES"
