--- a/hello-bridge/foundry.toml
+++ b/hello-bridge/foundry.toml
@@ -1,6 +1,6 @@
 [profile.default]
-out = "contract-abis"
-src = "contracts"
+out = "src/abis"
+src = "src/contracts"
 
 libs = ["node_modules"]
 viaIR = true
