--- a/custom-contracts-bridging/package.json
+++ b/custom-contracts-bridging/package.json
@@ -9,14 +9,11 @@
     "tsx": "^4.20.3"
   },
   "dependencies": {
-    "@gluwa/cc-next-query-builder": "^0.0.1",
+    "@gluwa/cc-next-query-builder": "^0.4.1",
+    "@openzeppelin/contracts": "^5.3.0",
     "@types/node": "^24.0.13",
     "dotenv": "^16.4.5",
-    "ethers": "^6.15.0",
-    "@openzeppelin/contracts": "^5.3.0",
-    "prompt-sync": "^4.2.0",
-    "readline-sync": "^1.4.10",
-    "viem": "^2.31.7"
+    "ethers": "^6.15.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
