--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ## These values should not be changed during the course of the tutorials ##
 # Source chain ID for sepolia on USC Testnet
 SOURCE_CHAIN_KEY=1
-# Prover API URL for USC Devnet
+# Prover API URL for USC Testnet
 PROVER_API_URL="https://proof-gen-api.usc-testnet2.creditcoin.network"
 # ERC20 burner contract on Sepolia
 SOURCE_CHAIN_CONTRACT_ADDRESS="0x15166Ba9d24aBfa477C0c88dD1E6321297214eC8"
